Agent Atlas/forceapp/main/default/objects/AI_Form_Fill_Log__c/AI_Form_Fill_Log__c.object-meta.xml
<CustomObject>
    <label>AI Form Fill Log</label>
    <nameField>
        <label>AI Form Fill Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Form Fill Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>