Agent Atlas/forceapp/main/default/objects/AI_Form_Fill_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fill</fullName>
            </value>
            <value>
                <fullName>clear</fullName>
            </value>
            <value>
                <fullName>replace</fullName>
            </value>
            <value>
                <fullName>clarify</fullName>
            </value>
            <value>
                <fullName>skip</fullName>
            </value>
            <value>
                <fullName>no_data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>