Agent Atlas/forceapp/main/default/objects/AI_Form_Fill_Log__c/fields/Command__c.field-meta.xml
<CustomField>
    <fullName>Command__c</fullName>
    <label>Command</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>