Agent Atlas/forceapp/main/default/objects/AI_Form_Fill_Log__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>