Agent Atlas/forceapp/main/default/objects/AI_Form_Fill_Log__c/fields/Debug_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Debug_Metadata__c</fullName>
    <label>Debug Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>