Agent Atlas/forceapp/main/default/objects/AI_Form_Fill_Log__c/fields/Duration_MS__c.field-meta.xml
<CustomField>
    <fullName>Duration_MS__c</fullName>
    <label>Duration MS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>