Agent Atlas/forceapp/main/default/objects/AI_Form_Fill_Log__c/fields/Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Submission</label>
    <referenceTo>Form_Submission__c</referenceTo>
    <relationshipLabel>AI Form Fill Logs</relationshipLabel>
    <relationshipName>AI_Form_Fill_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>