Agent Atlas/forceapp/main/default/objects/AI_Form_Fill_Log__c/fields/Masked_Value__c.field-meta.xml
<CustomField>
    <fullName>Masked_Value__c</fullName>
    <label>Masked Value</label>
    <type>TextArea</type>
</CustomField>