Agent Atlas/forceapp/main/default/objects/AI_Form_Fill_Log__c/fields/Question_Id__c.field-meta.xml
<CustomField>
    <fullName>Question_Id__c</fullName>
    <label>Question Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>