Agent Atlas/forceapp/main/default/objects/AI_Form_Fill_Log__c/fields/Question_Label__c.field-meta.xml
<CustomField>
    <fullName>Question_Label__c</fullName>
    <label>Question Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>