Agent Atlas/forceapp/main/default/objects/AI_Form_Fill_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>User__c</columns>
    <columns>Confidence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>